--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "app": "cd app && npm run start",
     "api": "cd api && npm run start",
-    "start": "run-p app api"
+    "start": "run-p app api",
+    "email": "node cypress/mailReportGenerator.js",
+    "email_report": "npm run email"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "graphql": "15.8.0",
     "cypress": "^9.5.4",
+    "graphql": "15.8.0",
     "npm-run-all": "4.1.5"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mochawesome": "^7.1.3",
+    "nodemailer": "^6.7.5"
   }
 }
